Edit script.js, index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <div class="header">Etch-a-Sketch</div>
     <div class="container">
-      <div class="area"></div>
       <div class="options">
         <div class="vol-selection">
+          <div class="show-vol-select">16 x 16</div>
           <label for="vol-select">Select number of squares</label>
-          <input id="vol-select" type="range" min="1" max="100" />
+          <input id="vol-select" type="range" min="1" max="64" value="16" />
         </div>
         <div class="color-selection">
           <label for="colorselect">Select your color</label>
