Edit index.html, script.js, styles.css

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             name="colorselect"
             value="#000000"
           />
+          <button id="color-mode" class="small-button" value="ON">
+            Color Mode
+          </button>
         </div>
       </div>
     </div>
